--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
         "@types/node": "^17.0.35",
         "chai": "^4.3.6",
         "ethereum-waffle": "^3.2.0",
-        "ethers": "^5.6.6",
+        "ethers": "^5.7.2",
         "hardhat": "^2.9.5",
         "hardhat-preprocessor": "^0.1.4",
+        "husky": "^8.0.0",
         "prettier": "^2.6.2",
         "prettier-plugin-solidity": "^1.0.0-beta.19",
         "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5",
         "ts-node": "^10.7.0",
         "typechain": "^8.0.0",
-        "typescript": "^4.6.4",
-        "husky": "^8.0.0"
+        "typescript": "^4.6.4"
     }
 }
