ci: add `--ffi` into forge test to use .js script

--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -26,5 +26,5 @@ jobs:
               id: build
 
             - name: Run Forge tests
-              run: forge test -vvv
+              run: forge test -vvv --ffi
               id: forge-test
