--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/Openzeppelin/openzeppelin-contracts
+[submodule "lib/solidstate-solidity"]
+	path = lib/solidstate-solidity
+	url = https://github.com/solidstate-network/solidstate-solidity
