fix(ci): install foundry libraries

--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -19,6 +19,12 @@ jobs:
               with:
                   version: nightly
 
+            - name: Install Foundry Libraries
+              run: forge install solidstate-network/solidstate-solidity foundry-rs/forge-std Openzeppelin/openzeppelin-contracts rari-capital/solmate --no-commit
+
+            - name: Install packages (ehters required)
+              run: rm package.json && rm yarn.lock && yarn add ethers --immutable --immutable-cache --check-cache
+
             - name: Run Forge build
               run: |
                   forge --version
